<resources>
    //App Bar
    <string name="app_name">Contact List</string>
    <string name="Add">Add Contact</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    //Add Contact
    <string name="add_title">Add New Contact</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="address">Postal Address</string>
    <string name="required">Name (Required)</string>
    <string name="button_save">Save</string>
    //Contact Details
    <string name="details_title">Contact Details</string>
    <string name="delete_contact">Delete Contact</string>
    //Edit Contact
    <string name="edit_contact">Edit Contact</string>
</resources>
